# PCY

./: Cargo.toml  Dioxus.toml  tailwind.css
assets/: main.css  tailwind.css
src/: main.rs
src/backend/: clipboard.rs  mod.rs  utils.rs
