[package]
name = "paste-fork"
version = "0.1.0"
authors = ["finn79426 <finn79426@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.6.1"
base64 = "0.22.1"
chrono = "0.4.42"
clipboard-master = "4.0.0"
cocoa = "0.26.1"
core-foundation = "0.10.1"
dioxus = "0.7.2"
dioxus-desktop = "0.7.2"
futures-util = "0.3.31"
generational-box = "0.7.2"
global-hotkey = "0.7.0"
image = "0.25.9"
log = "0.4.29"
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
once_cell = "1.21.3"
rusqlite = "0.37.0"
tokio = "1.48.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
